@@ -138,6 +138,7 @@ HAVE_DOT=YES
 DOT_NUM_THREADS=0
 DOT_FONTNAME=Helvetica
 DOT_FONTSIZE=10
+DOTFILE_DIRS=dotfiles
 CLASS_GRAPH=YES
 COLLABORATION_GRAPH=YES
 GROUP_GRAPHS=YES
