@@ -48,7 +48,7 @@ struct	menuDataStruct
 
 extern menuDataStruct	menuData[];
 
-enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,AUTOBM,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,UPDATECHECK,BEKIND,GLOBALPLUGMENU,AUTOSEARCH,SHOWWHITESPACE,DOCINEDITOR,SHOWMENUICONS,MAXPREFSWIDGETS};
+enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,NOSYNTAX,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,READLINK,AUTOSHOW,UPDATECHECK,BEKIND,GLOBALPLUGMENU,AUTOSEARCH,SHOWWHITESPACE,DOCINEDITOR,SHOWMENUICONS,MAXPREFSWIDGETS};
 enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXBMWIDTH,NOTETABSSIZE,MAXJUMPHISTORY,MAXPREFSINTWIDGETS};
 
 extern	GtkWidget	*prefsWidgets[MAXPREFSWIDGETS];
